--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="BOSIC" />
-    <meta name="description" content="PEPEWIFMAGA - MAKE MEMES GREAT AGAIN" />
-    <title>$PEGA - MAKE MEMES GREAT AGAIN</title>
+    <meta name="description" content="TRUMPCAT - MAKE CATS GREAT AGAIN" />
+    <title>$CATRPM - MAKE CATS GREAT AGAIN</title>
     <link rel="icon" type="image/gif" href="/images/main.png">
     <!--font-awesome icons link-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -85,9 +85,9 @@
                     </div>
                 </div>
                 <div class="col-lg-7 banner-txt">
-                    <h3> PEPEWIFMAGA </h3>
+                    <h3> TRUMPCAT </h3>
                     <h1>CA : CRt31Cai6r3HhnpiB44kBre5YrVd3u5T5kCdftvhAEPr </h1>
-                    <h2>$PEGA - LETS MAKE MEMES GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
+                    <h2>$CATRPM - LETS MAKE MEMES GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
 </h2>
                     <a href="https://dexscreener.com/">BUY NOW</a>
                 </div>
@@ -183,8 +183,8 @@
                         <div class="col-lg-7 col-md-6">
                             <div class="about-txt">
                                 <span class="separet-span"> </span>
-                                <h3>$PEGA</h3>
-                                <p> SOMEONE NEEDS TO BE LEADER - WHO CAN DO IT BETTER THAN PEPEWIFMAGA? MAKE MEMES GREAT AGAIN VOTE FOR PEPE FOR PRESIDENT OF ALL MEMES
+                                <h3>$CATRPM</h3>
+                                <p> SOMEONE NEEDS TO BE LEADER - WHO CAN DO IT BETTER THAN TRUMPCAT? MAKE MEMES GREAT AGAIN VOTE FOR PEPE FOR PRESIDENT OF ALL MEMES
 
                                     </p>
                                 <p class="separate-p tab-hider">JOIN THE COMMUNITY OR YOU DESERVE 10 YEARS OF CONSECUTIVE RUGS</p>
@@ -207,10 +207,10 @@
             <div class="row justify-content-center">
                 <div class="col-lg-4 col-sm-11">
                     <div class="footer-logo text-center">
-                        <a class="f-logo" href="#banner"><b>PEPEWIFMAGA </b></a>
+                        <a class="f-logo" href="#banner"><b>TRUMPCAT </b></a>
                         <p>THE LEADER OF ALL MEMES THE BOSS </p>
                         <div class="footer-social">
-                            <a href="https://x.com/PEPEWIFMAGA_"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://x.com/TRUMPCAT_"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                         </div>
                     </div>
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="fop-btm text-center">
-                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$PEGA </a></h2>
+                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$CATRPM </a></h2>
                     </div>
                 </div>
             </div>
