--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 </div>
                 <div class="col-lg-7 banner-txt">
                     <h3> TRUMPCAT </h3>
-                    <h1>CA : CRt31Cai6r3HhnpiB44kBre5YrVd3u5T5kCdftvhAEPr </h1>
-                    <h2>$CATRPM - LETS MAKE MEMES GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
+                    <h1>CA :  </h1>
+                    <h2>$CATRPM - LETS MAKE CATS GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
 </h2>
                     <a href="https://dexscreener.com/">BUY NOW</a>
                 </div>
@@ -116,7 +116,7 @@
                                 <p>2.LP TOKENS BURNT 100% BEFORE LAUNCH</p>
                                 <p>3.ZERO TAX ON TRANSACTIONS </p>
                                 <div class="over-btn">
-                                    <a href="https://t.me/PEGAsolana">JOIN NOW</a>
+                                    <a href="https://t.me/">JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <p>1.SPECIAL PARTNERSHIPS... </p>
                                 <p>2.MASSIVE GIVE AWAY ...</p>
                                 <p>3.SECRET LOCATION EVENT... </p>                                  <div class="over-btn">
-                                    <a href="https://t.me/PEGAsolana"> JOIN NOW</a>
+                                    <a href="https://t.me/"> JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -184,11 +184,11 @@
                             <div class="about-txt">
                                 <span class="separet-span"> </span>
                                 <h3>$CATRPM</h3>
-                                <p> SOMEONE NEEDS TO BE LEADER - WHO CAN DO IT BETTER THAN TRUMPCAT? MAKE MEMES GREAT AGAIN VOTE FOR PEPE FOR PRESIDENT OF ALL MEMES
+                                <p> SOMEONE NEEDS TO BE LEADER - WHO CAN DO IT BETTER THAN TRUMPCAT? MAKE CATS GREAT AGAIN VOTE FOR TRUMPCAT FOR PRESIDENT OF ALL MEMES
 
                                     </p>
                                 <p class="separate-p tab-hider">JOIN THE COMMUNITY OR YOU DESERVE 10 YEARS OF CONSECUTIVE RUGS</p>
-                                <a href="https://t.me/PEGAsolana">JOIN TELEGRAM NOW</a>
+                                <a href="https://t.me/">JOIN TELEGRAM NOW</a>
                             </div>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                         <a class="f-logo" href="#banner"><b>TRUMPCAT </b></a>
                         <p>THE LEADER OF ALL MEMES THE BOSS </p>
                         <div class="footer-social">
-                            <a href="https://x.com/TRUMPCAT_"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://x.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                         </div>
                     </div>
