--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="keywords" content="BOSIC" />
     <meta name="description" content="TRUMPCAT - MAKE CATS GREAT AGAIN" />
-    <title>$CATRPM - MAKE CATS GREAT AGAIN</title>
+    <title>$CATRMP - MAKE CATS GREAT AGAIN</title>
     <link rel="icon" type="image/gif" href="/images/main.png">
     <!--font-awesome icons link-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -87,7 +87,7 @@
                 <div class="col-lg-7 banner-txt">
                     <h3> TRUMPCAT </h3>
                     <h1>CA :  </h1>
-                    <h2>$CATRPM - LETS MAKE CATS GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
+                    <h2>$CATRMP - LETS MAKE CATS GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
 </h2>
                     <a href="https://dexscreener.com/">BUY NOW</a>
                 </div>
@@ -183,7 +183,7 @@
                         <div class="col-lg-7 col-md-6">
                             <div class="about-txt">
                                 <span class="separet-span"> </span>
-                                <h3>$CATRPM</h3>
+                                <h3>$CATRMP</h3>
                                 <p> SOMEONE NEEDS TO BE LEADER - WHO CAN DO IT BETTER THAN TRUMPCAT? MAKE CATS GREAT AGAIN VOTE FOR TRUMPCAT FOR PRESIDENT OF ALL MEMES
 
                                     </p>
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="fop-btm text-center">
-                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$CATRPM </a></h2>
+                        <h2>Copyright &copy; 2024. All rights reserved by <a href="#">$CATRMP </a></h2>
                     </div>
                 </div>
             </div>
