--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <p>2.LP TOKENS BURNT 100% BEFORE LAUNCH</p>
                                 <p>3.ZERO TAX ON TRANSACTIONS </p>
                                 <div class="over-btn">
-                                    <a href="https://t.me/">JOIN NOW</a>
+                                    <a href="https://t.me/CATRMP">JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                                 <p>1.SPECIAL PARTNERSHIPS... </p>
                                 <p>2.MASSIVE GIVE AWAY ...</p>
                                 <p>3.SECRET LOCATION EVENT... </p>                                  <div class="over-btn">
-                                    <a href="https://t.me/"> JOIN NOW</a>
+                                    <a href="https://t.me/CATRMP"> JOIN NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
 
                                     </p>
                                 <p class="separate-p tab-hider">JOIN THE COMMUNITY OR YOU DESERVE 10 YEARS OF CONSECUTIVE RUGS</p>
-                                <a href="https://t.me/">JOIN TELEGRAM NOW</a>
+                                <a href="https://t.me/CATRMP">JOIN TELEGRAM NOW</a>
                             </div>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                         <a class="f-logo" href="#banner"><b>TRUMPCAT </b></a>
                         <p>THE LEADER OF ALL MEMES THE BOSS </p>
                         <div class="footer-social">
-                            <a href="https://x.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/TrumpCatSol_"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 
                         </div>
                     </div>
