--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a class="nav-link" href="#about">who that </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link bor" href="https://dexscreener.com/"  data-target="#exampleModal">buy now</a>
+                        <a class="nav-link bor" href="https://dexscreener.com/solana/8izzh2gt2tjdvqbhqep73vn1vekje9vbgvrcgrb6vve5"  data-target="#exampleModal">buy now</a>
                     </li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
                     <h1>CA : 2BjBABt3nY4uR7rWA5XDkYPAAqp4gcfpCbyB6271oMdM </h1>
                     <h2>$CATRMP - LETS MAKE CATS GREAT AGAIN YOUR FAVORITE MEME COMING TO CLEAN THIS DIRTY SPACE OF RUGGED PROJECTS AND FILTHY JEETS
 </h2>
-                    <a href="https://dexscreener.com/">BUY NOW</a>
+                    <a href="https://dexscreener.com/solana/8izzh2gt2tjdvqbhqep73vn1vekje9vbgvrcgrb6vve5">BUY NOW</a>
                 </div>
             </div>
         </div>
@@ -128,7 +128,7 @@
                                 <p>1.DEX ADS </p>
                                 <p>2.MOONTOK FAST TRACK & BANNER </p>
                                 <p>3.CALLERS & TWITTER RAIDS </p>                                <div class="over-btn">
-                                    <a href="https://dexscreener.com/">BUY NOW</a>
+                                    <a href="https://dexscreener.com/solana/8izzh2gt2tjdvqbhqep73vn1vekje9vbgvrcgrb6vve5">BUY NOW</a>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                                 <p>2x EXPERIENCED DEVS </p>
                                 <p>3X GRAPHIC DESIGNERS</p>
                                 <p>1X SECRET PARTNERSHIP</p>                                <div class="over-btn">
-                                    <a href="https://dexscreener.com/">BUY NOW</a>
+                                    <a href="https://dexscreener.com/solana/8izzh2gt2tjdvqbhqep73vn1vekje9vbgvrcgrb6vve5">BUY NOW</a>
                                 </div>
                             </div>
                         </div>
